# mesa3d

./: 2  22.1.2_deps.md  GL_dispach.md  Samplers.md  \  aa.dot  addrlib.md  amdgpu_gart.md  amdgpu_winsyhs.md  atoms.s.framebuffer  bash.md  binary.md  bindless_texture.md  bit_func.md  blitter.md  buffer_objects.md  build.sh  build_mesa23.sh  cmake.md  compute.md  compute.wiki  conclude.md  dbus.md  ddebug.md  default_fb.md  dep.txt  dma_cs.md  dri.md  egl_render_call.md  eglapi.md  extension.md  fbo.md  format.md  fragment_shader.md  gbm.md  gfx_cs.md  gl_clear.md  glapi.md  glcompile.md  glx.md  (+42 more)
22.1.3/: build.sh  llvm.ini
dot/: mesa_graphviz.dot
markdown_note/: conclude.md  ddebug.md  driver.md  gl_dispatch.md  register.md  shader.md
mesa-18.3.6/: build.sh  llvm.ini  meson.build  vulkan_env.sh
mesa-18.3.6/src/amd/vulkan/: radv_debug.c
mesa-18.3.6/src/egl/drivers/dri2/: egl_dri2.c  platform_drm.c
mesa-18.3.6/src/egl/main/: eglapi.c
mesa-18.3.6/src/gallium/auxiliary/driver_ddebug/: dd_util.h
mesa-18.3.6/src/gallium/auxiliary/tgsi/: tgsi_ureg.c
mesa-18.3.6/src/gallium/drivers/radeon/: radeon_winsys.h
mesa-18.3.6/src/gallium/drivers/radeonsi/: si_blit.c  si_fence.c  si_state.c  si_texture.c
mesa-18.3.6/src/gallium/state_trackers/dri/: dri2.c
mesa-18.3.6/src/gbm/backends/dri/: gbm_dri.c
mesa-18.3.6/src/gbm/main/: gbm.c
mesa-18.3.6/src/mesa/drivers/dri/common/: dri_util.c  (+1 more)
mesa-18.3.6/src/mesa/main/: debug.c  draw.c  texobj.c
openmp/: openmp.md
osg/: osg.md
osg/my_osg_program/: CMakeLists.txt
src/: draw_triangle.cpp
src/chatGPT/: a.out  build.sh  dd_debug.md  demo  demo.c  makefile  transform_feedback_demo.cpp
src/epoll_demo/: main.c
src/learnOpengl/: CMakeLists.txt  advanced_glsl_ubo.cpp  basic_light_specular.cpp  basic_light_specular.cpp1  colors.cpp  create_window.cpp  framebuffers.cpp  geometry_shader_houses.cpp  gpt_transform_feedback.cpp  mesh.h  texture.cpp  textures_combined.cpp
src/learnOpengl/.cache/clangd/index/: _fixes.hpp.5DD0CE9FFED86BD9.idx  _vectorize.hpp.E412FE16A82BC4E9.idx  advanced_glsl_ubo.cpp.BCF7AE6BE17766F3.idx  basic_light_specular.cpp.76D1A0BF5C96227B.idx  camera.h.6CD94BBACEA30144.idx  colors.cpp.1D5E37839A03E63C.idx  common.hpp.5DDA8455AA0C4AE2.idx  compute_common.hpp.2B407A42C05D4B92.idx  compute_vector_relational.hpp.4BF721E1AA713544.idx  constants.hpp.A1BEB5C366A20DA3.idx  constants.inl.7C2A956787361988.idx  create_window.cpp.7B6E581770CBF002.idx  epsilon.hpp.30C8858F96531F54.idx  epsilon.inl.A97AC15DA42DD81E.idx  exponential.hpp.6590C3E0B86E8257.idx  framebuffers.cpp.AD50C246873FC985.idx  func_common.inl.248F4E60CDA016B0.idx  func_exponential.inl.E2DADA27A22A7FDF.idx  func_geometric.inl.F7A7FCCCB40D3721.idx  func_integer.inl.7DB092C83525F486.idx  func_matrix.inl.096C0E821B3E6C62.idx  func_packing.inl.F4365FFD7859880E.idx  func_trigonometric.inl.33A1EACD3BCD27D4.idx  func_vector_relational.inl.47B9A21546DE9F39.idx  fwd.hpp.5D6BF42A4A0D5E27.idx  geometric.hpp.EEECC3FD1B26C441.idx  geometry_shader_houses.cpp.3F7E1B33617A6E24.idx  glad.c.EE5C756EE7141F6A.idx  glad.h.E0D2A9E2DB3A40F6.idx  glm.hpp.4E7D0A91F0071702.idx  gpt_transform_feedback.cpp.A2E3DD96AFAB1E82.idx  integer.hpp.AC16E06B53F5BB18.idx  khrplatform.h.DA0642D9CDA47BAC.idx  mat2x2.hpp.23E254D03F3AE55F.idx  mat2x3.hpp.925ED057D678DE39.idx  mat2x4.hpp.E43FEEC695CC539B.idx  mat3x2.hpp.CE389586D5F35D12.idx  mat3x3.hpp.03795B86E9AB2E6D.idx  mat3x4.hpp.42B4456B043A62A7.idx  mat4x2.hpp.A74834B0565DD724.idx  (+160 more)
src/learnOpengl/include/glad/: glad.h
src/learnOpengl/learnopengl/: camera.h  mesh.h  model.h
src/learnOpengl/src/: glad.c
src/mesa22/: CMakeLists.txt  draw.cpp
src/mesa22/.cache/clangd/index/: draw.cpp.38C8C0E354C389C6.idx
src/python3/: test.py
src/x11/: a.out  demo.cpp
src/x11/linux_3d_graphics_programming/: CMakeLists.txt  hello.cc
src/x11/xlib/: basicwin.c  compile_commands.json  high.md
src/x11/xlib/bitmaps/: icon_bitmap
